k8s/mlflow/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
spec:
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: mlflow:latest
          imagePullPolicy: Never
          args:
            - "mlflow"
            - "server"
            - "--backend-store-uri"
            - "postgresql://mlflow:$(POSTGRES_MLFLOW_PASSWORD)@postgres:5432/mlflow"
            - "--default-artifact-root"
            - "s3://mlflow-artifacts/"
            - "--host"
            - "0.0.0.0"
            - "--port"
            - "5000"  
            - "--allowed-hosts"
            - "*"
            - "--cors-allowed-origins"
            - "*"
          ports:
            - containerPort: 5000
