k8s/mlflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000 
  selector:
    app: mlflow
